loader barem neka vrti

--- a/parcijalni.html
+++ b/parcijalni.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parcijalni</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h2>Pretraži seriju</h2>
@@ -20,6 +21,7 @@
       <tbody></tbody>
     </table>
     <p id="poruka"></p>
+    <span class="loader"></span>
     <script src="parcijalni.js"></script>
   </body>
 </html>
