--- a/parcijalni.html
+++ b/parcijalni.html
@@ -21,7 +21,7 @@
       <tbody></tbody>
     </table>
     <p id="poruka"></p>
-    <span class="loader"></span>
+    <div id="loader"></div>
     <script src="parcijalni.js"></script>
   </body>
 </html>
