--- a/parcijalni.html
+++ b/parcijalni.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Parcijalni</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Parcijalni</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body>
-  <div class="bodydiv">
-    <h2 class="title">Pretraži seriju</h2>
-    <input class="search" type="text" placeholder="Upiši seriju" />
-    <div id="loader"></div>
-    <table id="results">
-      <thead>
-        <tr>
-          <th>Serija</th>
-          <th>Ocjena</th>
-          <th>Žanr</th>
-          <th>Opis</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <p id="poruka"></p>
-    <script src="parcijalni.js"></script>
-  </div>
-</body>
-
+  <body>
+    <p>Ajmo!</p>
+    <div class="bodydiv">
+      <h2 class="title">Pretraži seriju</h2>
+      <input class="search" type="text" placeholder="Upiši seriju" />
+      <div id="loader"></div>
+      <table id="results">
+        <thead>
+          <tr>
+            <th>Serija</th>
+            <th>Ocjena</th>
+            <th>Žanr</th>
+            <th>Opis</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+      <p id="poruka"></p>
+      <script src="parcijalni.js"></script>
+    </div>
+  </body>
 </html>
